nom nom... ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMmgAOaWp5XjvU8wV6G1Uyg",
+      "authorship_tag": "ABX9TyN3p0vMZAod3vpXkoR5OaY7",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -345,6 +345,29 @@
       ],
       "metadata": {
         "id": "I2JgmVtRPIaN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Save the model if the accuracy is >=90%"
+      ],
+      "metadata": {
+        "id": "IcCeBXWTTIPL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if int(total_test_acc) >= 85:\n",
+        "  torch.save(obj=model.state_dict(), f='model.pt')\n",
+        "else:\n",
+        "  print(\"Accuracy isn't good enough...\")"
+      ],
+      "metadata": {
+        "id": "fsZUMHtPTQ4K"
       },
       "execution_count": null,
       "outputs": []
