nom nom... ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMa43pJ5tqj1mhFEpo53hwG",
+      "authorship_tag": "ABX9TyP2bjBqjC09eAJ7CJtFQFk/",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -137,58 +137,14 @@
         "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
         "    )\n",
         "\n",
-        "    self.block_4 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
-        "    )\n",
-        "\n",
-        "    self.block_5 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
-        "    )\n",
-        "    self.block_6 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
-        "    )\n",
-        "    self.block_7 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
-        "    )\n",
-        "    self.block_8 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
-        "    )\n",
-        "    self.block_9 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
-        "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
-        "    )\n",
-        "\n",
         "    self.Classifier = nn.Sequential(\n",
         "        nn.Flatten(),\n",
-        "        nn.Linear(in_features=hidden_units*260*260, out_features=output_units)\n",
+        "        nn.Linear(in_features=hidden_units*227*227, out_features=output_units)\n",
         "\n",
         "    )\n",
         "\n",
         "  def forward(self, x):\n",
-        "    return self.Classifier(self.block_9(self.block_8(self.block_7(self.block_6(self.block_5(self.block_4(self.block_3(self.block_2(self.block_1(x))))))))))\n",
+        "    return self.Classifier(self.block_3(self.block_2(self.block_1(x))))\n",
         "\n",
         "model = CNNModel(input_units=3, hidden_units=10, output_units=len(class_names))\n",
         "model = model.to(device)"
