nom nom... ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -4,7 +4,8 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyP2bjBqjC09eAJ7CJtFQFk/",
+      "gpuType": "T4",
+      "authorship_tag": "ABX9TyPZZkzclVAGHMpt9pWyFR5B",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -13,7 +14,8 @@
     },
     "language_info": {
       "name": "python"
-    }
+    },
+    "accelerator": "GPU"
   },
   "cells": [
     {
@@ -37,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "AkTKWyUwOcbh"
       },
@@ -52,6 +54,9 @@
         "from timeit import default_timer as timer\n",
         "import os\n",
         "from tqdm.auto import tqdm\n",
+        "import requests\n",
+        "import zipfile\n",
+        "from pathlib import Path\n",
         "\n",
         "device = \"cuda\" if torch.cuda.is_available() else \"cpu\""
       ]
@@ -68,23 +73,77 @@
     {
       "cell_type": "code",
       "source": [
+        "data_path = Path(\"data/\")\n",
+        "img_path = data_path / \"food\"\n",
+        "\n",
+        "# If the image folder doesn't exist, download it and prepare it...\n",
+        "if img_path.is_dir():\n",
+        "    print(f\"{img_path} directory exists.\")\n",
+        "else:\n",
+        "    print(f\"Did not find {img_path} directory, creating one...\")\n",
+        "    img_path.mkdir(parents=True, exist_ok=True)\n",
+        "\n",
+        "    # Download pizza, steak, sushi data\n",
+        "    with open(data_path / \"data.zip\", \"wb\") as f:\n",
+        "        request = requests.get(\"https://github.com/ArtificialT800/FoodModel/raw/main/food_101.zip\")\n",
+        "        print(\"Downloading dataset...\")\n",
+        "        f.write(request.content)\n",
+        "\n",
+        "    # Unzip pizza, steak, sushi data\n",
+        "    with zipfile.ZipFile(data_path / \"data.zip\", \"r\") as zip_ref:\n",
+        "        print(\"Unzipping data...\")\n",
+        "        zip_ref.extractall(img_path)"
+      ],
+      "metadata": {
+        "id": "ABtCk4WGtFuN"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Train and test split"
+      ],
+      "metadata": {
+        "id": "_V5BXPBOtQRk"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "train_dir = img_path / \"train\"\n",
+        "test_dir = img_path / \"test\"\n",
+        "\n",
+        "train_dir, test_dir"
+      ],
+      "metadata": {
+        "id": "aOZXrHe8tPNL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "data_transform = transforms.Compose([\n",
         "    transforms.Resize(size=(224, 224)),\n",
         "    transforms.TrivialAugmentWide(num_magnitude_bins=31),\n",
         "    transforms.ToTensor()\n",
         "])\n",
         "\n",
-        "train_data = torchvision.datasets.Food101(root=\"data\",\n",
-        "                                          split=\"train\",\n",
-        "                                          download=True,\n",
-        "                                          transform=data_transform)\n",
+        "train_data = datasets.ImageFolder(root=train_dir,\n",
+        "                                  transform=data_transform, #A transform for the data\n",
+        "                                  target_transform=None, #A transform for the labels/targets\n",
+        "                                  )\n",
         "\n",
-        "test_data = torchvision.datasets.Food101(root='data',\n",
-        "                                         split='test',\n",
-        "                                         download=True,\n",
-        "                                         transform=data_transform)\n",
+        "test_data = datasets.ImageFolder(root=test_dir,\n",
+        "                                 transform=data_transform,\n",
+        "                                 target_transform=None)\n",
         "\n",
-        "BATCH_SIZE = 32\n",
+        "print(train_data, test_data)\n",
+        "\n",
+        "BATCH_SIZE = 16\n",
         "NUM_WORKERS = os.cpu_count()\n",
         "\n",
         "train_dataloader = DataLoader(dataset=train_data, shuffle=True, batch_size=BATCH_SIZE, num_workers=NUM_WORKERS)\n",
@@ -105,7 +164,7 @@
       "metadata": {
         "id": "t1AjnT9zOx4-"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -115,36 +174,53 @@
         "  def __init__(self, input_units, output_units, hidden_units):\n",
         "    super().__init__()\n",
         "    self.block_1 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=input_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
+        "        nn.Conv2d(in_channels=input_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
         "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
         "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
+        "        nn.MaxPool2d(kernel_size=2, stride=1)\n",
         "    )\n",
         "\n",
         "    self.block_2 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
         "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
         "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
+        "        nn.MaxPool2d(kernel_size=2, stride=1)\n",
         "    )\n",
         "    self.block_3 = nn.Sequential(\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
         "        nn.ReLU(),\n",
-        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=1, stride=1, padding=1),\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
         "        nn.ReLU(),\n",
-        "        nn.MaxPool2d(kernel_size=1, stride=1)\n",
+        "        nn.MaxPool2d(kernel_size=2, stride=1)\n",
         "    )\n",
+        "\n",
+        "    self.block_4 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2, stride=1)\n",
+        "    )\n",
+        "    self.block_5 = nn.Sequential(\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.Conv2d(in_channels=hidden_units, out_channels=hidden_units, kernel_size=2, stride=1, padding=1),\n",
+        "        nn.ReLU(),\n",
+        "        nn.MaxPool2d(kernel_size=2, stride=1)\n",
+        "    )\n",
+        "\n",
         "\n",
         "    self.Classifier = nn.Sequential(\n",
         "        nn.Flatten(),\n",
-        "        nn.Linear(in_features=hidden_units*227*227, out_features=output_units)\n",
+        "        nn.Linear(in_features=hidden_units*229*229, out_features=output_units)\n",
         "\n",
         "    )\n",
         "\n",
         "  def forward(self, x):\n",
-        "    return self.Classifier(self.block_3(self.block_2(self.block_1(x))))\n",
+        "\n",
+        "    return self.Classifier(self.block_5(self.block_4(self.block_3(self.block_2(self.block_1(x))))))\n",
         "\n",
         "model = CNNModel(input_units=3, hidden_units=10, output_units=len(class_names))\n",
         "model = model.to(device)"
@@ -152,7 +228,7 @@
       "metadata": {
         "id": "TfCM3dOH1Tyd"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -186,7 +262,7 @@
       "metadata": {
         "id": "7Vm8MpMq3geh"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -197,9 +273,15 @@
         "\n",
         "start = timer()\n",
         "\n",
-        "epochs = 3\n",
+        "EPOCHS = 100\n",
         "\n",
-        "for epoch in tqdm(range(epochs)):\n",
+        "results = {\"train_loss\": [],\n",
+        "          \"train_acc\": [],\n",
+        "          \"test_loss\": [],\n",
+        "          \"test_acc\": []\n",
+        "          }\n",
+        "\n",
+        "for epoch in tqdm(range(EPOCHS)):\n",
         "  #Training\n",
         "\n",
         "  model.train()\n",
@@ -242,10 +324,83 @@
         "    total_test_loss /= len(test_dataloader)\n",
         "    total_test_acc /= len(test_dataloader)\n",
         "\n",
-        "  print(f\"Epochs: {epoch}| Train Loss: {train_loss}, Train Accuracy: {train_acc}% | Test Loss: {total_test_loss}, Test Accuracy: {total_test_acc}%\")\n"
+        "    results[\"train_loss\"].append(train_loss.to(\"cpu\"))\n",
+        "    results[\"train_acc\"].append(train_acc)\n",
+        "    results[\"test_loss\"].append(total_test_loss.to(\"cpu\"))\n",
+        "    results[\"test_acc\"].append(total_test_acc)\n",
+        "\n",
+        "  print(f\"Epochs: {epoch}| Train Loss: {train_loss:.4f}, Train Accuracy: {train_acc:.4f}% | Test Loss: {total_test_loss:.4f}, Test Accuracy: {total_test_acc:.4f}%\")\n"
       ],
       "metadata": {
         "id": "8ba0nDuz4KPz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(f\"Losses: {results['train_loss']}, {results['test_loss']}\")\n",
+        "print(f\"Accuracy: {results['train_acc']}, {results['test_acc']}\")"
+      ],
+      "metadata": {
+        "id": "VYe2d3T0h0lX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Plotting Loss curves"
+      ],
+      "metadata": {
+        "id": "wZBWobH2f4-p"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def plot_loss_curves(results):\n",
+        "  \"\"\"Plots training curves of a trained model\"\"\"\n",
+        "  train_loss = results[\"train_loss\"]\n",
+        "  total_test_loss = results[\"test_loss\"]\n",
+        "\n",
+        "  train_acc = results[\"train_acc\"]\n",
+        "  total_test_acc = results[\"test_acc\"]\n",
+        "\n",
+        "  epochs = range(len(results[\"train_loss\"]))\n",
+        "\n",
+        "  plt.figure(figsize=(15, 7))\n",
+        "\n",
+        "  plt.subplot(1, 2, 1)\n",
+        "  plt.plot(epochs, train_loss, label=\"Train Loss\")\n",
+        "\n",
+        "  plt.plot(epochs, total_test_loss, label=\"Test Loss\")\n",
+        "  plt.title(\"Loss\")\n",
+        "  plt.xlabel(\"Epochs\")\n",
+        "  plt.legend()\n",
+        "\n",
+        "  plt.subplot(1, 2, 2)\n",
+        "  plt.plot(epochs, train_acc, label=\"Train Accuracy\")\n",
+        "  plt.plot(epochs, total_test_acc, label=\"Test Accuracy\")\n",
+        "  plt.title(\"Accuracy\")\n",
+        "  plt.xlabel(\"Epochs\")\n",
+        "  plt.legend()"
+      ],
+      "metadata": {
+        "id": "reVmSODdf4gJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "plot_loss_curves(results=results)"
+      ],
+      "metadata": {
+        "id": "L8Bsc0HEgN6I"
       },
       "execution_count": null,
       "outputs": []
@@ -284,9 +439,8 @@
         "  img = img.to(\"cpu\")\n",
         "  plot_img = img.squeeze()\n",
         "  plt.imshow(plot_img.permute(1, 2, 0))\n",
-        "  plt.title(f\"Pred: {class_names[image]} | Prob: {img_pred_probs.max()}\")\n",
-        "  plt.axis(False)\n",
-        "  print(img_pred_probs)"
+        "  plt.title(f\"Pred: {class_names[image]} | Prob: {(img_pred_probs.max()):.4f}\")\n",
+        "  plt.axis(False)"
       ],
       "metadata": {
         "id": "ol_H7xHnPGwX"
@@ -319,8 +473,10 @@
       "source": [
         "if int(total_test_acc) >= 85:\n",
         "  torch.save(obj=model.state_dict(), f='model.pt')\n",
+        "\n",
         "else:\n",
-        "  print(\"Accuracy isn't good enough...\")"
+        "  print(\"Accuracy isn't good enough...\")\n",
+        "  print(f\"Current Accuracy is: {total_test_acc:.3f}%\")"
       ],
       "metadata": {
         "id": "fsZUMHtPTQ4K"
