nom nom... ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMViV8lYbXXTUA5EEcYXZCx",
+      "authorship_tag": "ABX9TyMD/4YsBYaCUuAxjOm+za2y",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -77,19 +77,20 @@
         "img_path = data_path / \"food\"\n",
         "\n",
         "# If the image folder doesn't exist, download it and prepare it...\n",
+        "\n",
         "if img_path.is_dir():\n",
         "    print(f\"{img_path} directory exists.\")\n",
         "else:\n",
         "    print(f\"Did not find {img_path} directory, creating one...\")\n",
         "    img_path.mkdir(parents=True, exist_ok=True)\n",
         "\n",
-        "    # Download pizza, steak, sushi data\n",
+        "    # Download the data\n",
         "    with open(data_path / \"data.zip\", \"wb\") as f:\n",
         "        request = requests.get(\"https://github.com/ArtificialT800/FoodModel/raw/main/food_101.zip\")\n",
         "        print(\"Downloading dataset...\")\n",
         "        f.write(request.content)\n",
         "\n",
-        "    # Unzip pizza, steak, sushi data\n",
+        "    # Unzip the data\n",
         "    with zipfile.ZipFile(data_path / \"data.zip\", \"r\") as zip_ref:\n",
         "        print(\"Unzipping data...\")\n",
         "        zip_ref.extractall(img_path)"
