nom nom... ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMD/4YsBYaCUuAxjOm+za2y",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyMicJb0Li9vMUEGpaScHhe4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -169,6 +170,15 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "#Model"
+      ],
+      "metadata": {
+        "id": "A7mVoIaDhDI-"
+      }
+    },
+    {
       "cell_type": "code",
       "source": [
         "class CNNModel(nn.Module):\n",
@@ -247,7 +257,7 @@
         "loss_fn = nn.CrossEntropyLoss()\n",
         "\n",
         "optimizer = torch.optim.Adam(params=model.parameters(),\n",
-        "                             lr=0.01)\n",
+        "                             lr=0.001)\n",
         "\n",
         "def accuracy_fn(y_true, y_pred):\n",
         "  correct = torch.eq(y_true, y_pred).sum().item()\n",
