nom nom... ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyMicJb0Li9vMUEGpaScHhe4",
+      "authorship_tag": "ABX9TyNkjCboiFNsqQadSgDmDxNt",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -135,8 +134,8 @@
         "])\n",
         "\n",
         "train_data = datasets.ImageFolder(root=train_dir,\n",
-        "                                  transform=data_transform, #A transform for the data\n",
-        "                                  target_transform=None, #A transform for the labels/targets\n",
+        "                                  transform=data_transform,\n",
+        "                                  target_transform=None,\n",
         "                                  )\n",
         "\n",
         "test_data = datasets.ImageFolder(root=test_dir,\n",
@@ -181,6 +180,8 @@
     {
       "cell_type": "code",
       "source": [
+        "##Building the Vision Model\n",
+        "\n",
         "class CNNModel(nn.Module):\n",
         "  def __init__(self, input_units, output_units, hidden_units):\n",
         "    super().__init__()\n",
@@ -230,10 +231,9 @@
         "    )\n",
         "\n",
         "  def forward(self, x):\n",
-        "\n",
         "    return self.Classifier(self.block_5(self.block_4(self.block_3(self.block_2(self.block_1(x))))))\n",
         "\n",
-        "model = CNNModel(input_units=3, hidden_units=10, output_units=len(class_names))\n",
+        "model = CNNModel(input_units=3, hidden_units=16, output_units=len(class_names))\n",
         "model = model.to(device)"
       ],
       "metadata": {
@@ -257,18 +257,77 @@
         "loss_fn = nn.CrossEntropyLoss()\n",
         "\n",
         "optimizer = torch.optim.Adam(params=model.parameters(),\n",
-        "                             lr=0.001)\n",
+        "                             lr=0.0001)\n",
         "\n",
+        "#Accuracy function\n",
         "def accuracy_fn(y_true, y_pred):\n",
         "  correct = torch.eq(y_true, y_pred).sum().item()\n",
         "  acc = (correct/len(y_pred))*100\n",
         "  return acc\n",
         "\n",
+        "\n",
+        "#Keeping track of how long the model took to train\n",
         "def time_taken(start: float,\n",
         "               end: float,\n",
         "               device: torch.device = device):\n",
         "  total_time = end-start\n",
-        "  return total_time\n"
+        "  return total_time\n",
+        "\n",
+        "\n",
+        "#Function to see the model's training curves\n",
+        "def plot_loss_curves(results):\n",
+        "  \"\"\"Plots training curves of a trained model\"\"\"\n",
+        "  train_loss = results[\"train_loss\"]\n",
+        "  total_test_loss = results[\"test_loss\"]\n",
+        "\n",
+        "  train_acc = results[\"train_acc\"]\n",
+        "  total_test_acc = results[\"test_acc\"]\n",
+        "\n",
+        "  epochs = range(len(results[\"train_loss\"]))\n",
+        "\n",
+        "  plt.figure(figsize=(15, 7))\n",
+        "\n",
+        "  plt.subplot(1, 2, 1)\n",
+        "  plt.plot(epochs, train_loss, label=\"Train Loss\")\n",
+        "\n",
+        "  plt.plot(epochs, total_test_loss, label=\"Test Loss\")\n",
+        "  plt.title(\"Loss\")\n",
+        "  plt.xlabel(\"Epochs\")\n",
+        "  plt.legend()\n",
+        "\n",
+        "  plt.subplot(1, 2, 2)\n",
+        "  plt.plot(epochs, train_acc, label=\"Train Accuracy\")\n",
+        "  plt.plot(epochs, total_test_acc, label=\"Test Accuracy\")\n",
+        "  plt.title(\"Accuracy\")\n",
+        "  plt.xlabel(\"Epochs\")\n",
+        "  plt.legend()\n",
+        "\n",
+        "\n",
+        "#Function to predict on custom images\n",
+        "def plot_preds(model: torch.nn.Module):\n",
+        "  img_path = input(\"Enter the image path: \")\n",
+        "  img = torchvision.io.read_image(img_path)\n",
+        "  img = img.type(torch.float32) / 255\n",
+        "  img = img.to(device)\n",
+        "  img_transform = transforms.Compose([\n",
+        "      transforms.Resize(size=(224, 224))\n",
+        "  ])\n",
+        "  img = img_transform(img)\n",
+        "  img = img.unsqueeze(dim=0)\n",
+        "\n",
+        "  model = model.to(device)\n",
+        "  model.eval()\n",
+        "  with torch.inference_mode():\n",
+        "    img_pred = model(img)\n",
+        "    img_pred_probs = torch.softmax(img_pred, dim=1)\n",
+        "\n",
+        "  image = torch.argmax(img_pred_probs, dim=1).cpu()\n",
+        "  plt.figure(figsize=(12, 7))\n",
+        "  img = img.to(\"cpu\")\n",
+        "  plot_img = img.squeeze()\n",
+        "  plt.imshow(plot_img.permute(1, 2, 0))\n",
+        "  plt.title(f\"Pred: {class_names[image]} | Prob: {(img_pred_probs.max()):.4f}\")\n",
+        "  plt.axis(False)"
       ],
       "metadata": {
         "id": "7Vm8MpMq3geh"
@@ -279,12 +338,14 @@
     {
       "cell_type": "code",
       "source": [
+        "##Training and testing Loop\n",
+        "\n",
         "torch.manual_seed(42)\n",
         "torch.cuda.manual_seed(42)\n",
         "\n",
         "start = timer()\n",
         "\n",
-        "EPOCHS = 100\n",
+        "EPOCHS = 50\n",
         "\n",
         "results = {\"train_loss\": [],\n",
         "          \"train_acc\": [],\n",
@@ -340,10 +401,51 @@
         "    results[\"test_loss\"].append(total_test_loss.to(\"cpu\"))\n",
         "    results[\"test_acc\"].append(total_test_acc)\n",
         "\n",
-        "  print(f\"Epochs: {epoch}| Train Loss: {train_loss:.4f}, Train Accuracy: {train_acc:.4f}% | Test Loss: {total_test_loss:.4f}, Test Accuracy: {total_test_acc:.4f}%\")\n"
+        "  print(f\"Epochs: {epoch}| Train Loss: {train_loss:.4f}, Train Accuracy: {train_acc:.4f}% | Test Loss: {total_test_loss:.4f}, Test Accuracy: {total_test_acc:.4f}%\")"
       ],
       "metadata": {
         "id": "8ba0nDuz4KPz"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "torch.save(obj=model.state_dict(), f='train_model.pt')"
+      ],
+      "metadata": {
+        "id": "jl0HEQjbIw04"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#Save the model if the accuracy is >= 85%"
+      ],
+      "metadata": {
+        "id": "IcCeBXWTTIPL"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "if int(total_test_acc) >= 85:\n",
+        "  print(f\"Test Accuracy is pretty good..\\nCurrent Test Accuracy is: {total_test_acc:.3f}%\")\n",
+        "  torch.save(obj=model.state_dict(), f='model.pt')\n",
+        "\n",
+        "elif int(train_acc) >= 95:\n",
+        "  torch.save(obj=model.state_dict(), f='train_model.pt')\n",
+        "  print(\"Train Accuracy is good.. \\nCurrent Test Accuracy is: {total_test_acc:.3f}%\")\n",
+        "\n",
+        "else:\n",
+        "  print(\"Accuracy isn't good enough...\")\n",
+        "  print(f\"Current Test Accuracy is: {total_test_acc:.3f}%\")"
+      ],
+      "metadata": {
+        "id": "fsZUMHtPTQ4K"
       },
       "execution_count": null,
       "outputs": []
@@ -356,42 +458,6 @@
       "metadata": {
         "id": "wZBWobH2f4-p"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "def plot_loss_curves(results):\n",
-        "  \"\"\"Plots training curves of a trained model\"\"\"\n",
-        "  train_loss = results[\"train_loss\"]\n",
-        "  total_test_loss = results[\"test_loss\"]\n",
-        "\n",
-        "  train_acc = results[\"train_acc\"]\n",
-        "  total_test_acc = results[\"test_acc\"]\n",
-        "\n",
-        "  epochs = range(len(results[\"train_loss\"]))\n",
-        "\n",
-        "  plt.figure(figsize=(15, 7))\n",
-        "\n",
-        "  plt.subplot(1, 2, 1)\n",
-        "  plt.plot(epochs, train_loss, label=\"Train Loss\")\n",
-        "\n",
-        "  plt.plot(epochs, total_test_loss, label=\"Test Loss\")\n",
-        "  plt.title(\"Loss\")\n",
-        "  plt.xlabel(\"Epochs\")\n",
-        "  plt.legend()\n",
-        "\n",
-        "  plt.subplot(1, 2, 2)\n",
-        "  plt.plot(epochs, train_acc, label=\"Train Accuracy\")\n",
-        "  plt.plot(epochs, total_test_acc, label=\"Test Accuracy\")\n",
-        "  plt.title(\"Accuracy\")\n",
-        "  plt.xlabel(\"Epochs\")\n",
-        "  plt.legend()"
-      ],
-      "metadata": {
-        "id": "reVmSODdf4gJ"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -416,40 +482,6 @@
     {
       "cell_type": "code",
       "source": [
-        "def plot_preds(model: torch.nn.Module):\n",
-        "  img_path = input(\"Enter the image path: \")\n",
-        "  img = torchvision.io.read_image(img_path)\n",
-        "  img = img.type(torch.float32) / 255\n",
-        "  img = img.to(device)\n",
-        "  img_transform = transforms.Compose([\n",
-        "      transforms.Resize(size=(224, 224))\n",
-        "  ])\n",
-        "  img = img_transform(img)\n",
-        "  img = img.unsqueeze(dim=0)\n",
-        "\n",
-        "  model = model.to(device)\n",
-        "  model.eval()\n",
-        "  with torch.inference_mode():\n",
-        "    img_pred = model(img)\n",
-        "    img_pred_probs = torch.softmax(img_pred, dim=1)\n",
-        "\n",
-        "  image = torch.argmax(img_pred_probs, dim=1).cpu()\n",
-        "  plt.figure(figsize=(12, 7))\n",
-        "  img = img.to(\"cpu\")\n",
-        "  plot_img = img.squeeze()\n",
-        "  plt.imshow(plot_img.permute(1, 2, 0))\n",
-        "  plt.title(f\"Pred: {class_names[image]} | Prob: {(img_pred_probs.max()):.4f}\")\n",
-        "  plt.axis(False)"
-      ],
-      "metadata": {
-        "id": "ol_H7xHnPGwX"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "plot_preds(model=model)"
       ],
       "metadata": {
@@ -461,26 +493,23 @@
     {
       "cell_type": "markdown",
       "source": [
-        "#Save the model if the accuracy is >= 85%"
+        "#Conclusion"
       ],
       "metadata": {
-        "id": "IcCeBXWTTIPL"
+        "id": "evJlEv7zw3Ya"
       }
     },
     {
       "cell_type": "code",
       "source": [
-        "if int(total_test_acc) >= 85:\n",
-        "  torch.save(obj=model.state_dict(), f='model.pt')\n",
-        "\n",
-        "elif int(train_acc) >= 90:\n",
-        "  torch.save(obj=model.state_dict(), f='train_model.pt')\n",
-        "else:\n",
-        "  print(\"Accuracy isn't good enough...\")\n",
-        "  print(f\"Current Accuracy is: {total_test_acc:.3f}%\")"
+        "\"\"\"\n",
+        "That's all for this small project. You could could always adjust the hyperparameters of the model to make it perform even better.\n",
+        "If there are any issues, you could always create a new issue in my github repo, \"https://github.com/ArtificialT800/FoodModel/issues\"..\n",
+        "The model's dataset was simplified as I wanted to keep this project beginner friendly. Thank you!!!\n",
+        "\"\"\""
       ],
       "metadata": {
-        "id": "fsZUMHtPTQ4K"
+        "id": "KNZMo3Gbw4pa"
       },
       "execution_count": null,
       "outputs": []
