nom nom... ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMOEHFlHDoZg/3N6ptjM/8E",
+      "authorship_tag": "ABX9TyPRvWARKT0jY/kMcx+YVZM1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/ArtificialT800/FoodModel/blob/main/yum_food.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/ArtificialT800/FoodAI/blob/main/yum_food.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -254,10 +254,19 @@
     {
       "cell_type": "code",
       "source": [
+        "#Loss function\n",
+        "\n",
         "loss_fn = nn.CrossEntropyLoss()\n",
         "\n",
+        "#Optimizer\n",
+        "\"\"\"\n",
+        "You could always experiment with other optimizers too, like SGD or Adagrad!\n",
+        "\n",
+        "More optimizers at -> \"https://pytorch.org/docs/stable/optim.html#algorithms\"\n",
+        "\n",
+        "\"\"\"\n",
         "optimizer = torch.optim.Adam(params=model.parameters(),\n",
-        "                             lr=0.0001)\n",
+        "                             lr=0.001)\n",
         "\n",
         "#Accuracy function\n",
         "def accuracy_fn(y_true, y_pred):\n",
