--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPRvWARKT0jY/kMcx+YVZM1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyOwk0l03d1VVZil6hQstCAM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -123,6 +124,15 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "##Data Augmentation"
+      ],
+      "metadata": {
+        "id": "UeS7MfSTU7Z3"
+      }
     },
     {
       "cell_type": "code",
@@ -451,7 +461,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##Plotting Loss curves"
+        "#Plotting Loss curves"
       ],
       "metadata": {
         "id": "wZBWobH2f4-p"
