nom nom.. ah yes, its food

--- a/yum_food.ipynb
+++ b/yum_food.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyPkAgTUsnJnWBbrTlMhWN0T",
+      "authorship_tag": "ABX9TyO+BFCYZkSPxpJUqM0zPkz5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +39,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "AkTKWyUwOcbh"
       },
@@ -86,10 +85,7 @@
         "    img_path.mkdir(parents=True, exist_ok=True)\n",
         "\n",
         "    # Download the data\n",
-        "    with open(data_path / \"data.zip\", \"wb\") as f:\n",
-        "        request = requests.get(\"https://github.com/ArtificialT800/FoodAI/raw/main/food_101.zip\")\n",
-        "        print(\"Downloading dataset...\")\n",
-        "        f.write(request.content)\n",
+        "    !gdown 1ktjvxJJjUf5Zd8jRdG_q8_Xn7_4oAk5D -O data/data.zip\n",
         "\n",
         "    # Unzip the data\n",
         "    with zipfile.ZipFile(data_path / \"data.zip\", \"r\") as zip_ref:\n",
@@ -175,7 +171,7 @@
       "metadata": {
         "id": "t1AjnT9zOx4-"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -249,7 +245,7 @@
       "metadata": {
         "id": "TfCM3dOH1Tyd"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -351,7 +347,7 @@
       "metadata": {
         "id": "7Vm8MpMq3geh"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": []
     },
     {
